<resources>

    <string name="app_name">Go4Lunch</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="Map_View_Main">Map View</string>
    <string name="List_View">List View</string>
    <string name="Workmates">Workmates</string>
    <string name="LUNCH">YOUR LUNCH</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="LogOut">LOGOUT</string>
    <string name="Website">WEBSITE</string>
    <string name="Like">LIKE</string>
    <string name="Call">CALL</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MAIN ACTIVITY -->

    <string name="error_unknown_error">Une erreur inconnue s\'est produite</string>
    <string name="info_no_username_found">Pas de nom d\'utilisateur</string>
    <string name="info_no_email_found">Pas d\'email</string>

    <!-- Restaurant -->
    <string name="time_unavailable">No time</string>

    <!-- Restaurant/Workmates -->

    <string name="is_joining"> is joining!</string>

    <string name="is_eating_at">%1$s is eating at %2$s</string>
    <string name="has_not_decided_yet">%1$s has not decided yet</string>

    <!-- Settings -->
    <string name="notification_title">Notifications</string>
    <string name="off">off</string>
    <string name="on">on</string>

    <!-- Others -->
    <string name="list_unit_distance">%1$sm</string>
    <string name="website_unavailable">Website unavailable</string>
    <string name="phone_unavailable">unavailable phone</string>
    <string name="search_a_restaurant">Search restaurants</string>

    <!-- Notifications -->
    <string name="notification">You eat at %1$s where is at %2$s with : No one</string>
    <string name="notification_alone">You eat at %1$s where is at %2$s with : No one</string>
    <string name="no_restaurant">No Restaurant</string>
    <string name="located_at">"  located at  "</string>
    <string name="name">Go4Lunch</string>
    <string name="default_notification_channel_id">default id</string>



    <!-- FACEBOOK -->
    <string name="facebook_application_id" translatable="false">199776401444652</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb199776401444652</string>



    <!-- TWITTER -->
    <string name="twitter_consumer_key" translatable="false">rBscj5lwKypInk7NyDzUJXUCa</string>
    <string name="twitter_consumer_secret" translatable="false">ygf5LC39cRpMpBvrCPpbUgjXMjp6FtRxBA8lvY2bbU4b0PF35d</string>



    <string name="cancel">Auth cancel</string>
    <string name="no_network">no network</string>
    <string name="error_restaurant">error restaurant</string>
    <string name="location_permission">location perm</string>
    <string name="error_during_creating">error creating</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="Sign_in_with_Facebook">Sign in with Facebook</string>

</resources>